--- a/accounting/templates/accounting/invoice-edit.html
+++ b/accounting/templates/accounting/invoice-edit.html
@@ -122,7 +122,7 @@
 
               <td>
                 <input
-                  type="number"
+                  type="text"
                   class="form-control"
                   v-model="invoice_line.quantity"
                 />
