--- a/projectmanager/templates/projectmanager/includes/projects-app/script.html
+++ b/projectmanager/templates/projectmanager/includes/projects-app/script.html
@@ -7,8 +7,8 @@
             projects: projects_for_projects_app
         },
         methods: {
-            to_price: function(vall) { 
-                return  to_price(vall) 
+            to_price: function(vall,curr) { 
+                return  to_price(vall,curr) 
             }
         }
     })
