org unit page OK

--- a/attachments/templates/attachments/includes/downloads-app/script.html
+++ b/attachments/templates/attachments/includes/downloads-app/script.html
@@ -8,6 +8,7 @@
             downloads: downloads,
             waiting: false,
             new_download_file: '',
+            has_download_file:false,
             show_add_download_form: false,
         },
         methods: {
