--- a/attachments/templates/attachments/includes/downloads-app/template.html
+++ b/attachments/templates/attachments/includes/downloads-app/template.html
@@ -82,7 +82,8 @@
                             <span class="btn btn-raised btn-round btn-default btn-file">
                                 <span class="fileinput-new farsi">انتخاب فایل</span>
 
-                                <input type="file" v-on:change="download_file=true" name="">
+
+                                <input type="file" v-on:change="has_download_file=true" name="">
                                 <div class="ripple-container"></div>
                             </span>
 
