--- a/organization/templates/organization/organization-unit.html
+++ b/organization/templates/organization/organization-unit.html
@@ -22,6 +22,53 @@
 
       </div>
     {% endif %}
+    <div class="col-12">
+        {% include "core/includes/page-thumbnail-header-app/template.html" %}
+
+    </div>
+    
+            <div class="col-md-4">
+                {% include "attachments/includes/links-app/template.html" %}
+
+            </div>
+ 
+            <div class="col-md-4">
+                {% include "attachments/includes/downloads-app/template.html" %}
+
+            </div>
+
+            <div class="col-md-4">
+                {% include "attachments/includes/tags-app/template.html" %}
+
+            </div>
+
+             <div class="col-md-12">
+                {% include "core/includes/page-description-app/short-description.html" %}
+            </div>
+
+            
+            <div class="col-md-12">
+                {% include "core/includes/page-description-app/description.html" %}
+
+            </div>
+
+              <div class="col-md-12">
+                {% include "attachments/includes/comments-app/template.html" %}
+
+            </div>
+              <div class="col-md-12">
+                {% include "attachments/includes/images-app/template.html" %}
+
+            </div>
+
+            <div class="col-md-12">
+                {% include "core/includes/page-related-app/template.html" %}
+
+            </div>
+
+            <div class="col-md-12">
+                {% include "attachments/includes/locations-app/template.html" %}
+            </div>
 
 </div>
 {% endblock content %} {% block script %}
@@ -29,6 +76,7 @@
   let organization_unit_id = parseInt("{{organization_unit.id}}");
 </script>
   {% include "organization/includes/sub-organization-units-app/script.html" %}
+  {% include "organization/includes/organization-unit-app/script.html" %}
 {% include "organization/includes/employees-app/script.html" %} 
 {% if add_employee_form %}
           {% include "organization/includes/add-employee-app/script.html" %}
