--- a/accounting/templates/accounting/includes/account-app/card.html
+++ b/accounting/templates/accounting/includes/account-app/card.html
@@ -23,7 +23,7 @@
       <div class="text-center">
         <div class="my-2">
           <button
-            @click="copy_to_clipboard({{account.code}})"
+            @click="copy_code_to_clipboard({{account.code}})"
             class="my-2 btn btn-{{account.color}}"
           >
             <small class=""> کد : </small>
