--- a/accounting/templates/accounting/includes/account-app/media.html
+++ b/accounting/templates/accounting/includes/account-app/media.html
@@ -12,7 +12,8 @@
 
         <div>
               <small  >
-                    <button :class="'btn btn-sm btn-'+account.color" @click="copy_to_clipboard(account.code)">
+            
+                    <button  :class="'btn btn-sm btn-'+account.color" @click="copy_code_to_clipboard(account.code)">
                         <small  >
                         کد 
 
