--- a/accounting/templates/accounting/includes/account-app/script.html
+++ b/accounting/templates/accounting/includes/account-app/script.html
@@ -21,7 +21,7 @@
                 }, 2000);
 
             },
-            copy_to_clipboard:function(code){
+            copy_code_to_clipboard:function(code){
                 copy_to_clipboard(code)
                 account_app.show_code_copied = true
                 setTimeout(() => {
