--- a/accounting/templates/accounting/includes/accounts-app/script.html
+++ b/accounting/templates/accounting/includes/accounts-app/script.html
@@ -8,7 +8,9 @@
       sort_field: "",
     },
     methods: {
-      copy_to_clipboard: vall=>copy_to_clipboard(vall),
+      copy_code_to_clipboard: vall=>copy_to_clipboard(vall),
+
+      copy_balance_to_clipboard: vall=>copy_to_clipboard(vall),
 
       sort: function (field) {
         console.log(field);
