--- a/accounting/templates/accounting/includes/person-account-app/media.html
+++ b/accounting/templates/accounting/includes/person-account-app/media.html
@@ -12,7 +12,7 @@
 
         <div>
                 <small  >
-                    <button :class="'btn btn-sm btn-'+person_account.color" @click="copy_to_clipboard(person_account.code)">
+                    <button :class="'btn btn-sm btn-'+person_account.color" @click="copy_code_to_clipboard(person_account.code)">
                         <small  >
                         کد 
 
