--- a/accounting/templates/accounting/includes/person-accounts-app/script.html
+++ b/accounting/templates/accounting/includes/person-accounts-app/script.html
@@ -7,8 +7,11 @@
             person_accounts: person_accounts_for_person_accounts_app
         },
         methods: {
-            copy_to_clipboard: vall=>copy_to_clipboard(vall),
+            copy_code_to_clipboard: vall=>copy_to_clipboard(vall),
  
+            
+            copy_balance_to_clipboard: vall=>copy_to_clipboard(vall),
+                        
             to_price: function(vall) {
                 let color="primary"
                 if(vall>0)color="success"
