--- a/warehouse/templates/warehouse/includes/add-warehouse-app/script.html
+++ b/warehouse/templates/warehouse/includes/add-warehouse-app/script.html
@@ -14,6 +14,18 @@
       DatePicker: VuePersianDatetimePicker,
     },
     methods: {
+      paste_from_clipboard: async function(){
+          console.log('paste_person_account ')
+
+           try {
+            const text = await navigator.clipboard.readText();
+            add_warehouse_app.account_code=String(text)
+            add_warehouse_app.select_account()
+             
+          } catch (err) {
+            console.error('Failed to read clipboard contents: ', err);
+          }
+      },
       to_price_colored: function (vall) {
         let colorr = "primary";
         if (vall > 0) {
@@ -32,19 +44,7 @@
       to_price: function (vall) {
         return to_price(vall) + " {{CURRENCY}}";
       },
-      select_organization_unit: function () {
-        let organization_unit_id=add_warehouse_app.organization_unit.id
-          console.log(add_warehouse_app.organization_unit);
-          select_organization_unit_by_id(add_warehouse_app.organization_unit.id).done((data) => {
-          console.log(data);
-          add_warehouse_app.organization_unit = data.organization_unit;
-              if (data.result === "SUCCEED") {
-                  add_warehouse_app.organization_unit = data.organization_unit;
-              } else {
-                  add_warehouse_app.organization_unit = {id:organization_unit_id}
-              }
-        });
-      },
+       
       select_account: function () {
           console.log(add_warehouse_app.account);
           select_account_by_code(add_warehouse_app.account_code).done((data) => {
@@ -60,8 +60,7 @@
         let payload = {
           csrfmiddlewaretoken: csrfmiddlewaretoken,
           name: this.name,
-          account_id: this.account.id,
-          organization_unit_id: this.organization_unit.id,
+          person_account_id: this.account.id, 
         };
 
         console.log(payload);
