--- a/warehouse/templates/warehouse/includes/warehouses-app/script.html
+++ b/warehouse/templates/warehouse/includes/warehouses-app/script.html
@@ -7,6 +7,12 @@
             warehouses: warehouses_for_warehouses_app
         },
         methods: {
+             copy_code_to_clipboard:function(code){
+                copy_to_clipboard(code)
+                
+
+            },
+
             to_price: function(vall) { 
                 return  to_price(vall) 
             }
