--- a/authentication/templates/authentication/includes/person-app/card.html
+++ b/authentication/templates/authentication/includes/person-app/card.html
@@ -1,6 +1,9 @@
 <div class="card">
   <div class="card-header">
-    <h5>{{person.full_name}}</h5>
+    <h5>
+      
+      شخص
+    </h5>
   </div>
   <div class="card-body">
     
