add warehouse sheet app started

--- a/warehouse/templates/warehouse/includes/warehouse-app/media.html
+++ b/warehouse/templates/warehouse/includes/warehouse-app/media.html
@@ -1,11 +1,11 @@
 <div class="media">
-    <a :href="ware_house.get_absolute_url">
-        <img :src="ware_house.thumbnail" class="rounded" width="48" alt="">
+    <a :href="warehouse.get_absolute_url">
+        <img :src="warehouse.thumbnail" class="rounded" width="48" alt="">
     </a>
     <div class="media-body mr-2">
-    <a :href="ware_house.get_absolute_url">
+    <a :href="warehouse.get_absolute_url">
         <h5>
-            <span v-text="ware_house.name"></span>
+            <span v-text="warehouse.name"></span>
         </h5>
     </a>
 
