--- a/accounting/templates/accounting/invoice-line.html
+++ b/accounting/templates/accounting/invoice-line.html
@@ -2,17 +2,16 @@
 <style>
   .field-name {
     text-align: left;
-    color:rgb(139, 138, 138);
-    font-size:   70%;
+    color: rgb(139, 138, 138);
+    font-size: 70%;
   }
   .field-value {
     text-align: right;
   }
 </style>
-{% endblock style %} {% block content %}
-{% load to_normal_number %}
-{% load to_price %}
-{% load to_persian_date %}
+{% endblock style %} {% block content %} {% load to_normal_number %}
+<div></div>
+{% load to_price %} {% load to_persian_date %}
 <div class="row rtl farsi">
   <div class="col-md-4">
     <div class="card">
@@ -20,22 +19,29 @@
         <h5>سطر فاکتور</h5>
       </div>
       <div class="card-body">
-        <h5>
-            
-        </h5>
-         {% if perms.accounting.change_invoiceline %}
-            <a href="{{invoice_line.get_edit_url}}" class="my-2 text-warning mx-2" title="ویرایش" target="_blank">
-                <i class="fa fa-edit text-warning"></i>
-                ویرایش
-            </a>
-            {% endif %} {% if perms.core.delete_invoice_line %}
+        <h5></h5>
+        {% if perms.accounting.change_invoiceline %}
+        <a
+          href="{{invoice_line.get_edit_url}}"
+          class="my-2 text-warning mx-2"
+          title="ویرایش"
+          target="_blank"
+        >
+          <i class="fa fa-edit text-warning"></i>
+          ویرایش
+        </a>
+        {% endif %} {% if perms.core.delete_invoice_line %}
 
-            <a href="{{invoice_line.get_delete_url}}" class="my-2 text-danger mx-2" title="حذف" target="_blank">
-                <i class="fa fa-trash text-danger"></i>
-                حذف
-            </a>
-            {% endif %}
-
+        <a
+          href="{{invoice_line.get_delete_url}}"
+          class="my-2 text-danger mx-2"
+          title="حذف"
+          target="_blank"
+        >
+          <i class="fa fa-trash text-danger"></i>
+          حذف
+        </a>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -64,14 +70,20 @@
               <td class="field-name">شرح</td>
 
               <td class="field-value">
-                <div class="media"> 
-                    
-                    <a href="{{invoice_line.invoice_line_item.get_absolute_url}}">
-                        <img src="{{invoice_line.invoice_line_item.thumbnail}}" class="rounded" width="64" alt="">
-                    </a>
+                <div class="media">
+                  <a href="{{invoice_line.invoice_line_item.get_absolute_url}}">
+                    <img
+                      src="{{invoice_line.invoice_line_item.thumbnail}}"
+                      class="rounded"
+                      width="64"
+                      alt=""
+                    />
+                  </a>
                   <div class="media-body">
-                    <a href="{{invoice_line.invoice_line_item.get_absolute_url}}">
-                        {{invoice_line.invoice_line_item.title}}
+                    <a
+                      href="{{invoice_line.invoice_line_item.get_absolute_url}}"
+                    >
+                      {{invoice_line.invoice_line_item.title}}
                     </a>
                   </div>
                 </div>
@@ -82,49 +94,36 @@
               <td class="field-name">تعداد / مقدار</td>
 
               <td class="field-value">
-              {{invoice_line.quantity|to_normal_number}}
-              {{invoice_line.unit_name}}
+                {{invoice_line.quantity|to_normal_number}}
+                {{invoice_line.unit_name}}
               </td>
             </tr>
 
-
-
-             <tr>
-              <td class="field-name">
-                قیمت جزء
-              </td>
+            <tr>
+              <td class="field-name">قیمت جزء</td>
 
               <td class="field-value">
-              {{invoice_line.unit_price|to_price}}
-                {{CURRENCY}}
-            </td>
+                {{invoice_line.unit_price|to_price}} {{CURRENCY}}
+              </td>
             </tr>
 
-
-             <tr>
-              <td class="field-name">
-                مبلغ
-              </td>
+            <tr>
+              <td class="field-name">مبلغ</td>
 
               <td class="field-value">
-                {{invoice_line.line_total|to_price}}
-                {{CURRENCY}}
+                {{invoice_line.line_total|to_price}} {{CURRENCY}}
               </td>
             </tr>
 
-
-             <tr>
-              <td class="field-name">
-                درصد تخفیف
-              </td>
+            <tr>
+              <td class="field-name">درصد تخفیف</td>
 
               <td class="field-value">
                 {{invoice_line.discount_percentage}} %
-
               </td>
             </tr>
 
-             <tr>
+            <tr>
               <td class="field-name"></td>
 
               <td class="field-value"></td>
@@ -134,5 +133,18 @@
       </div>
     </div>
   </div>
+  {% if add_invoice_line_warehouse_sheet_form %}
+
+  <div class="col-12">
+    {% include "warehouse/includes/add-warehouse-sheet-app/template.html" %}
+  </div>
+  {% endif %}
 </div>
-{% endblock content %} {% block script %} {% endblock script %}
+{% endblock content %} {% block script %}
+ {% if  add_invoice_line_warehouse_sheet_form %}
+
+    {% include "warehouse/includes/add-warehouse-sheet-app/script.html" %}
+  {% endif %} 
+
+{% endblock script %}
+
