--- a/accounting/templates/accounting/invoice.html
+++ b/accounting/templates/accounting/invoice.html
@@ -25,15 +25,23 @@
       <div class="col-md-12">
         {% include "accounting/includes/invoice-lines-app/template.html" %}
       </div>
+      
       <div class="col-md-12">
-        {% include "attachments/includes/locations-app/template.html" %}
+        {% include "warehouse/includes/warehouse-sheets-app/template.html" %}
       </div>
+ 
+
+      
       <div class="col-md-12">
         {% include "accounting/includes/financial-document-lines-app/template.html" %}
       </div>
       {% if add_financial_document_line_form %}
       <div class="col-md-12">
         {% include "accounting/includes/add-financial-document-line-app/template.html" %}
+      </div>
+      
+      <div class="col-md-12">
+        {% include "attachments/includes/locations-app/template.html" %}
       </div>
       {% endif %}
       <div class="col-md-4">
@@ -55,7 +63,6 @@
         {% include "core/includes/page-related-app/template.html" %}
       </div>
  
-
          {% if edit_invoice_form %}
       <div class="col-md-12">
         {% include "accounting/includes/edit-invoice-app/template.html" %}
@@ -75,4 +82,6 @@
 </div>
 {% endblock content %} {% block script %} 
 {% include "accounting/includes/invoice-app/script.html" %} 
+{% include "warehouse/includes/warehouse-sheets-app/script.html" %}
+
 {% endblock script %}
