--- a/accounting/templates/accounting/product.html
+++ b/accounting/templates/accounting/product.html
@@ -18,6 +18,11 @@
   <div class="col-md-12">
     {% include "accounting/includes/invoice-lines-app/template.html" %}
   </div>
+
+  <div class="col-md-12">
+    {% include "warehouse/includes/warehouse-sheets-app/template.html" %}
+  </div>
+
   <div class="col-md-4">
     {% include "attachments/includes/downloads-app/template.html" %}
   </div>
@@ -56,4 +61,7 @@
 {% include "accounting/includes/add-product-to-category-app/script.html" %} 
 {% include "accounting/includes/product-specifications-app/script.html" %} 
 {% include "accounting/includes/invoice-line-item-units-app/script.html" %} 
+{% include "warehouse/includes/warehouse-sheets-app/script.html" %}
+
 {% endblock script %}
+
