--- a/warehouse/templates/warehouse/index.html
+++ b/warehouse/templates/warehouse/index.html
@@ -16,6 +16,18 @@
   </div>
 
  
+  <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <a href="{% url 'warehouse:warehouse_sheets' %}">
+      <img
+        src="{% static 'warehouse/img/logo.png' %}"
+        width="64em"
+        class="mb-2"
+        alt=""
+      />
+      <h6 class="text-center">برگه های انبار</h6>
+    </a>
+  </div>
+
     
 </div>
 {% endblock content %}
