--- a/warehouse/templates/warehouse/includes/add-warehouse-sheet-app/template.html
+++ b/warehouse/templates/warehouse/includes/add-warehouse-sheet-app/template.html
@@ -20,124 +20,121 @@
       aria-labelledby="heading-add-warehouse-sheet"
       data-parent="#accordion-add-warehouse-sheet"
     >
-      <div class="card-body"> 
-          <div class="row rtl">
-            <div class="col-md-12">
-              <div class="form-group">
-                <label for="">توضیحات</label>
-                <input v-model="description" type="text" class="form-control" />
-              </div>
+      <div class="card-body">
+        <div class="row rtl">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="">توضیحات</label>
+              <input v-model="description" type="text" class="form-control" />
             </div>
+          </div>
 
-            <div class="col-md-12">
-              <div class="row">
-                <div class="col-6">
-                  <div class="form-group">
-                    <label for="warehouse_id">انبار</label>
-                    <button @click="paste_from_clipboard()" class="btn btn-sm btn-info">
-                      <i class="fa fa-paste"></i>
-                    </button>
-                    <input
-                      type="text"
-                      placeholder=""
-                      class="form-control"
-                      id="warehouse_id"
-                      @input="select_warehouse()"
-                      v-model="warehouse_id"
-                    />
-                  </div>
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="warehouse_id">انبار</label>
+                  <button
+                    @click="paste_from_clipboard()"
+                    class="btn btn-sm btn-info"
+                  >
+                    <i class="fa fa-paste"></i>
+                  </button>
+                  <input
+                    type="text"
+                    placeholder=""
+                    class="form-control"
+                    id="warehouse_id"
+                    @input="select_warehouse()"
+                    v-model="warehouse_id"
+                  />
                 </div>
+              </div>
 
-                <div class="col-6 mt-3">
-                  <div v-if="warehouse.id">
-                   
-                        {% include "warehouse/includes/warehouse-app/media.html" %}
-                   
-                  </div>
-                  <div v-if="!warehouse.id">
-
-                    <h5 class="text-danger">انبار انتخاب نشده است.</h5>
-                    <div>
-                      <a target="_blank" href="{% url 'warehouse:warehouses' %}">
-                        همه 
-                        انبار ها
-                    
+              <div class="col-6 mt-3">
+                <div v-if="warehouse.id">
+                  {% include "warehouse/includes/warehouse-app/media.html" %}
+                </div>
+                <div v-if="!warehouse.id">
+                  <h5 class="text-danger">انبار انتخاب نشده است.</h5>
+                  <div>
+                    <a target="_blank" href="{% url 'warehouse:warehouses' %}">
+                      همه انبار ها
                     </a>
-                    </div>
                   </div>
                 </div>
               </div>
             </div>
+          </div>
 
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="invoice_line_id">سطر فاکتور</label>
 
-            
-            <div class="col-md-12">
-              <div class="row">
-                <div class="col-6">
-                  <div class="form-group">
-                    <label for="invoice_line_id">سطر فاکتور</label>
-                     
-                    <input
-                      type="text"
-                      placeholder=""
-                      class="form-control"
-                      id="invoice_line_id"
-                      @input="select_invoice_line()"
-                      v-model="invoice_line_id"
-                    />
-                  </div>
+                  <input
+                    type="text"
+                    placeholder=""
+                    class="form-control"
+                    id="invoice_line_id"
+                    @input="select_invoice_line()"
+                    v-model="invoice_line_id"
+                  />
                 </div>
-
-                 
               </div>
             </div>
+          </div>
 
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="">جهت</label>
-                <select v-model="direction" type="text" class="form-control" >
-                    {% for direction in directions_for_add_warehouse_sheet_app  %}
-                      
-                    <option value="{{direction}}">{{direction}}</option>
-                    {% endfor %}
-                </select>
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="">جهت</label>
+              <select v-model="direction" type="text" class="form-control">
+                {% for direction in directions_for_add_warehouse_sheet_app %}
+
+                <option value="{{direction}}">{{direction}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="">قفسه</label>
+              <input v-model="shelf" type="text" class="form-control" />
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="">ردیف</label>
+              <input v-model="row" type="text" class="form-control" />
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="">ستون</label>
+              <input v-model="col" type="text" class="form-control" />
+            </div>
+          </div>
+
+          <div class="col-md-12 mt-2" v-if="message.show">
+            <div :class="'alert alert-'+message.color">
+              <div class="rtl text-right">
+                <h5 v-html="message.title"></h5>
+                <span v-html="message.body"></span>
               </div>
             </div>
+          </div>
 
-
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="">قفسه</label>
-                <input v-model="shelf" type="text" class="form-control" />
-              </div>
-            </div>
-
-            
-
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="">ردیف</label>
-                <input v-model="row" type="text" class="form-control" />
-              </div>
-            </div>
-
-            
-
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="">ستون</label>
-                <input v-model="col" type="text" class="form-control" />
-              </div>
-            </div>
-                   
-
-            <div class="col-md-12">
-              <button class="btn btn-success" @click="add_warehouse_sheet()">
-                <i class="fa fa-plus"></i>
-                افزودن
-              </button>
-            </div>
-          </div> 
+          <div class="col-md-12">
+            <button class="btn btn-success" @click="add_warehouse_sheet()">
+              <i class="fa fa-plus"></i>
+              افزودن
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
