--- a/accounting/templates/accounting/includes/financial-events-app/script.html
+++ b/accounting/templates/accounting/includes/financial-events-app/script.html
@@ -9,6 +9,12 @@
 
         },
         methods: {
+             copy_code_to_clipboard:function(code){
+                copy_to_clipboard(code)
+                
+
+            },
+
             filter:function(){
                 this.financial_events = financial_events_app_financial_events.filter(financial_event=> financial_event.title.indexOf(this.search_for) > -1 )
             },
@@ -16,6 +22,9 @@
                  return  to_price(vall,"")
             },
           
+            to_price_colored: function (vall,curr) {
+                 return  to_price_colored(vall,curr)
+            },
         }
     })
 </script>
