--- a/accounting/templates/accounting/includes/financial-events-app/template.html
+++ b/accounting/templates/accounting/includes/financial-events-app/template.html
@@ -1,205 +1,128 @@
-{% load to_persian_date %}
-{% load to_price %}
-{% load to_amount_color %}
-{% load static %}
+{% load to_persian_date %} {% load to_price %} {% load to_amount_color %} {% load static %}
 <div id="accordion-financial-events" class="rtl text-right farsi">
+  <div class="card" id="financial-events-app">
+    <div class="card-header" id="heading-financial-events">
+      <h5 class="text-center">
+        <button
+          class="btn btn-link"
+          data-toggle="collapse"
+          data-target="#collapse-financial-events"
+          aria-expanded="true"
+          aria-controls="collapse-financial-events"
+        >
+          رویداد های مالی
 
+          <span v-if="financial_events.length>0">
+            <small class="text-danger mx-2">
+              <span v-text="financial_events.length"></span>
+            </small>
+          </span>
+        </button>
+      </h5>
 
-    <div class="card" id="financial-events-app">
-        <div class="card-header" id="heading-financial-events">
-            <h5 class="text-center">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-financial-events"
-                    aria-expanded="true" aria-controls="collapse-financial-events">
-                    رویداد های مالی
+      {% if page_pre_description %}
 
+      <h5 class="text-center">{{page_pre_description}}</h5>
+      {% endif %} {% if page_description %}
 
-                    <span v-if="financial_events.length>0">
-                        <small class="text-danger mx-2">
-                            <span v-text="financial_events.length"></span>
-                        </small>
-                    </span>
+      <h4 class="text-center">{{page_description}}</h4>
+      {% endif %}
+    </div>
+    <div
+      id="collapse-financial-events"
+      class="collapse {% if expand_financial_events %} show {% endif %}"
+      aria-labelledby="heading-financial-events"
+      data-parent="#accordion-financial-events"
+    >
+      <div class="card-body">
+        <input
+          type="text"
+          v-model="search_for"
+          class="form-control"
+          placeholder="جستجو ..."
+          @input="filter()"
+        />
 
+        <div class="table-responsive rtl">
+          <img
+            v-if="false"
+            width="32"
+            src="{% static 'leo/img/loading.gif' %}"
+            alt=""
+          />
+          <h6 v-if="false">
+            <span class="text-muted">در حال بار گذاری ... </span>
+          </h6>
+          <table class="table table-striped rtl">
+            <thead>
+              <th>عنوان</th>
 
-                </button>
-            </h5>
+              <th>بدهکار</th>
 
-            {% if page_pre_description %}
+              <th>بستانکار</th>
+              <th>تاریخ</th>
+              <th>مبلغ</th>
+              <th></th>
+            </thead>
+            <tbody>
+              <tr v-for="financial_event in financial_events">
+                <td>
+                  <a :href="financial_event.get_absolute_url">
+                    <span v-text="financial_event.title"> </span>
+                  </a>
+                </td>
 
-            <h5 class="text-center">
-                {{page_pre_description}}
-            </h5>
-            {% endif %}
-            {% if page_description %}
+                <td>
+                  <div v-for="account in [financial_event.bedehkar]">
+                    {% include "accounting/includes/account-app/media.html" %}
+                  </div>
+                </td>
+                <td>
+                  <div v-for="account in [financial_event.bestankar]">
+                    {% include "accounting/includes/account-app/media.html" %}
+                  </div>
+                </td>
+                <td>
+                  <span v-text="financial_event.persian_event_datetime"></span>
+                </td>
+                <td>
+                  <span v-text="to_price(financial_event.amount)"> </span>
 
-            <h4 class="text-center">
-                {{page_description}}
-            </h4>
-            {% endif %}
-        </div>
-        <div id="collapse-financial-events" class="collapse {% if expand_financial_events %} show {% endif %}"
-            aria-labelledby="heading-financial-events" data-parent="#accordion-financial-events">
+                  <small class="text-muted"> {{CURRENCY}} </small>
+                </td>
 
-
-            <div class="card-body">
-
-
-                <input type="text" v-model="search_for" class="form-control" placeholder="جستجو ..." @input="filter()">
-
-
-
-                <div class="table-responsive rtl">
-                    <img v-if="false" width="32" src="{% static 'leo/img/loading.gif' %}" alt="">
-                    <h6 v-if="false">
-
-                        <span class="text-muted">در حال بار گذاری ... </span>
-                    </h6>
-                    <table class="table table-striped rtl">
-                        <thead>
-                            <th>
-                                عنوان
-                            </th>
-
-                            <th>
-                                بدهکار
-                            </th>
-
-                            <th>
-                                بستانکار
-                            </th>
-                            <th>
-                                تاریخ
-                            </th>
-                            <th>
-                                مبلغ
-                            </th>
-                            <th>
-
-                            </th>
-                        </thead>
-                        <tbody>
-
-
-                            <tr v-for="financial_event in financial_events">
-                                <td>
-                                    <a :href="financial_event.get_absolute_url">
-                                        <span v-text="financial_event.title">
-
-                                        </span>
-                                    </a>
-                                </td>
-
-
-
-                                <td>
-
-
-                                     <div class="media">
-                                        <a :href="financial_event.bedehkar.get_absolute_url">
-                                            <img :src="financial_event.bedehkar.thumbnail" class="rounded" width="32" alt="">
-                                        </a>
-                                        <div class="media-body mr-3">
-                                            <div>
-
-                                                <a :href="financial_event.bedehkar.get_absolute_url">
-                                                    <span v-text="financial_event.bedehkar.name "></span>
-                                                </a>
-                                            </div>
-                                            <div>
-
-                                                <a :href="financial_event.bedehkar.get_absolute_url">
-                                                    <small class="text-muted"
-                                                        v-text="financial_event.bedehkar.full_title"></small>
-                                                </a>
-                                            </div>
-                                            <div>
-                                                <small class="text-muted">
-                                                    <span v-text="financial_event.bedehkar.class_title"></span>
-                                                </small>
-                                            </div>
-                                        </div>
-                                    </div>
-                                   
-
-
-                                </td>
-                                <td>
-
-                                    <div class="media">
-                                        <a :href="financial_event.bestankar.get_absolute_url">
-                                            <img :src="financial_event.bestankar.thumbnail" class="rounded" width="32" alt="">
-                                        </a>
-                                        <div class="media-body mr-3">
-                                            <div>
-
-                                                <a :href="financial_event.bestankar.get_absolute_url">
-                                                    <span v-text="financial_event.bestankar.name "></span>
-                                                </a>
-                                            </div>
-                                            <div>
-
-                                                <a :href="financial_event.bestankar.get_absolute_url">
-                                                    <small class="text-muted"
-                                                        v-text="financial_event.bestankar.full_title"></small>
-                                                </a>
-                                            </div>
-                                            <div>
-                                                <small class="text-muted">
-                                                    <span v-text="financial_event.bestankar.class_title"></span>
-                                                </small>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-
-
-                                </td>
-                                <td>
-                                    <span v-text="financial_event.persian_event_datetime"></span>
-                                </td>
-                                <td>
-
-                                    <span v-text="to_price(financial_event.amount)">
-
-                                    </span>
-
-                                     <small class="text-muted">
-                                        {{CURRENCY}}
-                                    </small>
-
-                                </td>
-
-
-                                <td>
-
-                                    {% if perms.accounting.change_financial_event %}
-                                    <a class="my-2" target="_blank" title="ویرایش"
-                                        :href="financial_event.get_edit_url">
-                                        <i class="fa fa-edit text-warning"></i>
-                                        <!-- <span class="text-warning">
+                <td>
+                  {% if perms.accounting.change_financial_event %}
+                  <a
+                    class="my-2"
+                    target="_blank"
+                    title="ویرایش"
+                    :href="financial_event.get_edit_url"
+                  >
+                    <i class="fa fa-edit text-warning"></i>
+                    <!-- <span class="text-warning">
                                             ویرایش
                                         </span> -->
-                                    </a>
-                                    {% endif %}
-
-                                    {% if perms.accounting.delete_financial_event %}
-                                    <a class="my-2" target="_blank" title="حذف"
-                                        :href="financial_event.get_delete_url">
-                                        <i class="fa fa-trash text-danger"></i>
-                                        <!-- <span class="text-danger">
+                  </a>
+                  {% endif %} {% if perms.accounting.delete_financial_event %}
+                  <a
+                    class="my-2"
+                    target="_blank"
+                    title="حذف"
+                    :href="financial_event.get_delete_url"
+                  >
+                    <i class="fa fa-trash text-danger"></i>
+                    <!-- <span class="text-danger">
                                             حذف
                                         </span> -->
-                                    </a>
-                                    {% endif %}
-
-
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+                  </a>
+                  {% endif %}
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-
-
+      </div>
     </div>
+  </div>
 </div>
